--- a/audition/app/src/main/res/layout/activity_vending_machine.xml
+++ b/audition/app/src/main/res/layout/activity_vending_machine.xml
@@ -185,6 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="onButtonClicked"
                 android:text="Add Coin" />
 
             <Button
