--- a/audition/app/src/main/res/layout/activity_vending_machine.xml
+++ b/audition/app/src/main/res/layout/activity_vending_machine.xml
@@ -48,7 +48,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:onClick="onButtonClicked"
-                            android:text="Coke" />
+                            android:text="Coke\n\n$1.00" />
 
                         <Button
                             android:id="@+id/buttonProduct2"
@@ -56,7 +56,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:onClick="onButtonClicked"
-                            android:text="Chips" />
+                            android:text="Chips\n\n$0.50" />
 
                         <Button
                             android:id="@+id/buttonProduct3"
@@ -64,7 +64,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:onClick="onButtonClicked"
-                            android:text="Candy" />
+                            android:text="Candy\n\n$0.65" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -79,7 +79,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:onClick="onButtonClicked"
-                            android:text="Gum" />
+                            android:text="Gum\n\n$0.35" />
 
                         <Button
                             android:id="@+id/buttonProduct5"
