--- a/audition/app/src/main/res/layout/coin_select.xml
+++ b/audition/app/src/main/res/layout/coin_select.xml
@@ -40,11 +40,11 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/buttonNickle"
+            android:id="@+id/buttonNickel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Nickle" />
+            android:text="Nickel" />
 
         <Button
             android:id="@+id/buttonHalfDollar"
